--- a/index.html
+++ b/index.html
@@ -6,22 +6,54 @@
 
     <link rel="stylesheet" href="styles.css" />
 
+    <script src="./script.js" defer></script>
+
     <title>Riot Games</title>
   </head>
   <body>
     <main>
       <section class="login">
-        <img src="./images/logo.png" class="logo" />
-        <h1 class="login-title">Fazer Login</h1>
-        <label class="login-label">
-          <span class="span-active"> Nome de usuário </span>
-          <input type="text" class="input" name="username" />
-        </label>
+        <div class="wrapper">
+          <img src="./images/logo.png" class="logo" />
+          <h1 class="login-title">Fazer Login</h1>
+          <label class="login-label">
+            <span> Nome de usuário </span>
+            <input type="text" class="input" name="username" />
+          </label>
 
-        <label class="login-label">
-          <span> Senha </span>
-          <input type="text" class="input" name="passwrod" />
-        </label>
+          <label class="login-label">
+            <span> Senha </span>
+            <input type="text" class="input" name="passwrod" />
+          </label>
+          <div class="login-btns">
+            <button type="button" class="icon-btn">
+              <img src="./images/facebook.png" />
+            </button>
+
+            <button type="button" class="icon-btn">
+              <img src="./images/google.png" />
+            </button>
+
+            <button type="button" class="icon-btn">
+              <img src="./images/apple.png" />
+            </button>
+          </div>
+          <label class="login-label-check">
+            <input type="checkbox" class="input-chceck" />
+            Manter login
+          </label>
+        </div>
+        <div class="wrapper">
+          <button type="button" class="login-btn" disabled>
+            <svg viewBox="0 0 448 512">
+              <path
+                d="M438.6 278.6l-160 160C272.4 444.9 264.2 448 256 448s-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L338.8 288H32C14.33 288 .0016 273.7 .0016 256S14.33 224 32 224h306.8l-105.4-105.4c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160C451.1 245.9 451.1 266.1 438.6 278.6z"
+              />
+            </svg>
+          </button>
+          <a href="#" class="login-link">Não consegue iniciar sessão?</a>
+          <a href="#" class="login-link">Criar conta</a>
+        </div>
       </section>
       <section class="wallpaper"></section>
     </main>
