changed password input type

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
           <label class="login-label">
             <span> Senha </span>
-            <input type="text" class="input" name="passwrod" />
+            <input type="password" class="input" name="passwrod" />
           </label>
           <div class="login-btns">
             <button type="button" class="icon-btn">
